feat: Integrate RAG chatbot widget following official integration guide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- RAG Chatbot Container -->
+    <div id="edu-bot-container"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
